[package]
edition = "2021"
name = "parseswcbabelify"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4","serde-json"] }
napi-derive = "2.12.2"
swc = "16.1.1"                # (or the latest version)
swc_common = "8.0.0"
swc_ecma_ast = "8.0.1"
swc_ecma_parser = "10.0.1"
swc_ecma_transforms = "14.0.0"
swc_estree_compat = "11.0.0"
swc_node_comments = "8.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
